<resources>
    <string name="app_name">Calc</string>
    <string name="b1_label" translatable="false">1</string>
    <string name="b2_label" translatable="false">2</string>
    <string name="b3_label" translatable="false">3</string>
    <string name="b4_label" translatable="false">4</string>
    <string name="b5_label" translatable="false">5</string>
    <string name="b6_label" translatable="false">6</string>
    <string name="b7_label" translatable="false">7</string>
    <string name="b8_label" translatable="false">8</string>
    <string name="b9_label" translatable="false">9</string>
    <string name="b0_label" translatable="false">0</string>
    <string name="bdot_label" translatable="false">.</string>
    <string name="bplus_label" translatable="false">+</string>
    <string name="bminus_label" translatable="false">-</string>
    <string name="bmul_label" translatable="false">x</string>
    <string name="bdiv_label" translatable="false">÷</string>
    <string name="bequals_label" translatable="false">=</string>
    <string name="bclear_label" translatable="false">C</string>
    <string name="btheme_label">Swap theme</string>
    <string name="theme1_name">Theme 1</string>
    <string name="theme2_name">Theme 2</string>
    <string name="settings_back_label">OK</string>
</resources>